app/assets/stylesheets/taxs.css
#taxable-income a, #tax-calculated-as a, #tax-free-income a, #capital-gains a {
     display: inline-block;
     display: inline;
     text-decoration: none;
     overflow: hidden;
}

 .display-block {
     display: block;
}
 a, a:visited {
    color:#005ea5;
}

 .hmrc-logo-print {
     display: none;
}

.print-this {
     display: flex;
     gap: .5em
}

.print-this__link {
     border-bottom: 1px solid #000;
     color: #000;
     font-size: 16px;
     text-decoration: none;
     font-family: "GDS Transport", Arial, sans-serif;
}

#totalUkIncomeTax th {
     font-weight: 700;
}

#tax-spent .content, #tax-spent-header, #tax-spent-footer {
    display: flex;
    flex-flow: row nowrap;
    margin: 1em 0 0.2em;
}

#tax-spent .graph-green-bar {
    border-bottom: 10px solid #28a197;
}

#tax-spent .graph-grey-bar {
    border-top: 2px solid #b1b4b6;
}

#tax-spent dd {
    flex-grow: 1;
    padding: 0;
    margin: 0;
}

#tax-spent dt {
    flex-grow: 3;
    padding: 0;
    margin: 0;
}

#tax-spent dd {
  text-align: right;
}

#tax-spent #tax-spent-header, #tax-spent-footer {
    margin-top: 2em;
}

#tax-spent #tax-spent-footer {
    margin-bottom: 2em;
}

#tax-spent .heading-medium {
    margin: 0;
}

@media (min-width: 40.0625em) {
    #tax-spent .govuk-summary-list__row--no-actions::after {
        width: 0;
    }
}

body:not(.js-enabled) .print-this {
  display: none;
}

